[package]
name = "PikaDots"
version = "0.1.0"
authors = ["Ilia Konnov <iliakonnov@gmail.com>"]
edition = "2018"

[lib]
name = "pikadots"
path = "src/lib.rs"

[[bin]]
name = "pikadots"
path = "src/main.rs"

[features]
dark = []

[dependencies]
chrono = "0.4"
clap = "2.33"
byteorder = "1.3"
image = "0.22"
font8x8 = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
indicatif = "0.13"
failure = "0.1"
glob = "0.3"
regex = "1.3"
streaming-iterator = "0.1"
rocket = {version="0.4", features = ["tls"]}
parking_lot = "0.10"
